[package]
name = "minesweeper_ai_wasm"
version = "0.1.0"
authors = ["Clayton Hickey <clayton@claytondoesthings.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "^0.2.68"