[package]
name = "minesweeper_rs_wasm"
version = "0.1.0"
authors = ["Clayton Hickey <clayton@claytondoesthings.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = {version = "0.7.3", features = ["wasm-bindgen"]}
wasm-bindgen = {version = "^0.2.68", features = ["serde-serialize"]}
serde = { version = "1.0", features = ["derive"] }